--- a/Demo/webpack-demo/public/index.html
+++ b/Demo/webpack-demo/public/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Webpack-Demo</title>
+        <title>WebPack Demo</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <script src="dist/bundle.js"></script>
+    <script src="bundle.js"></script>
     </body>
 </html>
