--- a/demo/mode-demo/index.html
+++ b/demo/mode-demo/index.html
@@ -18,7 +18,7 @@
         </div>
         <script>
             (function() {
-                var scripts = ['prototype.js', 'singleton.js', 'strategy.js', 'proxy.js'];
+                var scripts = ['prototype.js', 'singleton.js', 'strategy.js', 'proxy.js', 'pubsub.js', 'command.js'];
                 for(var i = 0, len = scripts.length; i < len; i++) {
                     var script = document.createElement('script');
                     script.src = './' + scripts[i];
