--- a/demo/mode-demo/index.html
+++ b/demo/mode-demo/index.html
@@ -13,7 +13,7 @@
             </header>
             <form>
                 User Name: <input name="userName"/>
-                <input type="submit" value="submit"/>
+                <input type="submit" value="submit" class="input"/>
             </form>
         </div>
         <script>
