--- a/demo/mode-demo/index.html
+++ b/demo/mode-demo/index.html
@@ -27,7 +27,7 @@
                     'strategy.js', 
                     'proxy.js', 
                     'prototype.js', 
-                    'command.js',
+                    'chain.js',
                     'flyweight.js'
                     ];
                 for(var i = 0, len = scripts.length; i < len; i++) {
