--- a/demo/my-demos/public/index.html
+++ b/demo/my-demos/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>我的项目</title>
+    <title>梁仁洪的项目</title>
   </head>
   <body>
     <noscript>
