--- a/the-best/src/index.html
+++ b/the-best/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="./assets/lib/three/three.js"></script>
     <title>The Best</title>
 </head>
 <body>
