--- a/the-best/src/index.html
+++ b/the-best/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Best</title>
+    <link rel="stylesheet" href="./assets/lib/web-fonts-with-css/css/fontawesome-all.min.css">
 </head>
 <body>
     <div id="root"></div>
