--- a/demo-design-pattern/v2/index.html
+++ b/demo-design-pattern/v2/index.html
@@ -8,8 +8,8 @@
     <body>
 
         <script type="module">
-            import Observer from './Observer.js';
-            new Observer();
+            import Index from './index.js';
+            new Index();
         </script>
     </body>
 
