--- a/demo-design-pattern/v2/index.html
+++ b/demo-design-pattern/v2/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-
-<html>
-    <head>
-
-    </head>
-
-    <body>
-
-        <script type="module">
-            import Index from './index.js';
-            new Index();
-        </script>
-    </body>
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>设计模式</title>
+</head>
+<body>
+    <script type="module">
+        import Index from './index.js';
+        new Index().test('proxy').test('strategy');
+    </script>
+</body>
 </html>
