--- a/demo-design-pattern/v2/index.html
+++ b/demo-design-pattern/v2/index.html
@@ -21,11 +21,14 @@
         }
     </style>
     <title>设计模式</title>
+    <input type="text" id="flyweight-test-input"/>
+    <button id="flyweight-test-btn">render div</button>
+    <div id="flyweight-test-div-container"></div>
 </head>
 <body>
     <script type="module">
         import Index from './index.js';
-        new Index().test('frequency').test('strategy');
+        new Index().test('adapter').test('flyweight');
     </script>
 </body>
 </html>
