--- a/demo-design-pattern/v2/index.html
+++ b/demo-design-pattern/v2/index.html
@@ -28,7 +28,7 @@
 <body>
     <script type="module">
         import Index from './index.js';
-        new Index().test('adapter').test('state');
+        new Index().test('director').test('state');
     </script>
 </body>
 </html>
