--- a/demo-design-pattern/v2/index.html
+++ b/demo-design-pattern/v2/index.html
@@ -21,14 +21,15 @@
         }
     </style>
     <title>设计模式</title>
+    
+</head>
+<body>
     <input type="text" id="flyweight-test-input"/>
     <button id="flyweight-test-btn">render div</button>
     <div id="flyweight-test-div-container"></div>
-</head>
-<body>
     <script type="module">
         import Index from './index.js';
-        new Index().test('director').test('state');
+        new Index().test('template').test('decorator');
     </script>
 </body>
 </html>
